--- a/CodeStockApp/View/SeasonView/FallView.storyboard
+++ b/CodeStockApp/View/SeasonView/FallView.storyboard
@@ -30,6 +30,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="89w-Hg-bBP"/>
+                                    <constraint firstAttribute="width" constant="60" id="YDl-RX-pr4"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Top">
@@ -43,7 +44,6 @@
                             <constraint firstItem="NgH-Tt-XkW" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="IyX-cP-fa2"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Re9-XW-bH7" secondAttribute="trailing" constant="43" id="Jnk-xa-I8w"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="NgH-Tt-XkW" secondAttribute="bottom" id="SDH-6z-ab1"/>
-                            <constraint firstItem="Re9-XW-bH7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="290" id="mdY-bC-Csh"/>
                             <constraint firstItem="Re9-XW-bH7" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="ojP-Ju-ZKF"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="NgH-Tt-XkW" secondAttribute="trailing" id="q3r-L9-2Sj"/>
                             <constraint firstItem="NgH-Tt-XkW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="zEj-HW-FkM"/>
