--- a/CodeStockApp/View/SeasonView/OwnFallView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnFallView.storyboard
@@ -30,6 +30,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Cxh-32-69t"/>
+                                    <constraint firstAttribute="width" constant="60" id="lpU-98-P6N"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Top">
@@ -40,7 +41,6 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                         <constraints>
-                            <constraint firstItem="BHk-mQ-683" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="290" id="AQ8-PI-nGs"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yIS-dj-dkG" secondAttribute="trailing" id="UBH-Jd-q2w"/>
                             <constraint firstItem="BHk-mQ-683" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="V5M-BA-Cn4"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BHk-mQ-683" secondAttribute="trailing" constant="43" id="Wg9-Pc-De2"/>
