--- a/CodeStockApp/View/SeasonView/OwnSpringView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnSpringView.storyboard
@@ -29,6 +29,7 @@
                                 <rect key="frame" x="290" y="609" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="O69-sZ-ZyZ"/>
                                     <constraint firstAttribute="height" constant="60" id="haN-5J-a3m"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
@@ -41,7 +42,6 @@
                         <color key="backgroundColor" red="0.96921318769999998" green="0.82810233830000002" blue="0.91456442069999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="MLo-Kg-SOU" secondAttribute="trailing" id="0wR-g1-41T"/>
-                            <constraint firstItem="nxc-Kg-91J" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="290" id="AoT-PZ-sHg"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="nxc-Kg-91J" secondAttribute="trailing" constant="43" id="Hnr-Nk-JUt"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="MLo-Kg-SOU" secondAttribute="bottom" id="KZs-LZ-rAP"/>
                             <constraint firstItem="MLo-Kg-SOU" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Q2B-I5-eeq"/>
