--- a/CodeStockApp/View/SeasonView/OwnSummerView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnSummerView.storyboard
@@ -30,6 +30,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="a47-hY-ytO"/>
+                                    <constraint firstAttribute="width" constant="60" id="c9w-oh-xhF"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Top">
@@ -41,7 +42,6 @@
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
                             <constraint firstItem="bNc-lz-hno" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="1fb-S4-kSn"/>
-                            <constraint firstItem="cEe-v6-N1P" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="290" id="4M4-X7-bSr"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cEe-v6-N1P" secondAttribute="trailing" constant="43" id="AL0-n2-2Hg"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bNc-lz-hno" secondAttribute="bottom" id="Cb4-af-HIT"/>
                             <constraint firstItem="bNc-lz-hno" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l53-74-1EH"/>
