--- a/CodeStockApp/View/SeasonView/SummerView.storyboard
+++ b/CodeStockApp/View/SeasonView/SummerView.storyboard
@@ -30,6 +30,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="f2h-0I-6wr"/>
+                                    <constraint firstAttribute="width" constant="60" id="i4n-Xe-lyB"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Top">
@@ -41,7 +42,6 @@
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
                             <constraint firstItem="YH0-69-zSV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Rh2-nT-b0m"/>
-                            <constraint firstItem="9B4-or-cYA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="290" id="VQd-Dg-A5l"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="YH0-69-zSV" secondAttribute="bottom" id="cRf-DT-vH1"/>
                             <constraint firstItem="9B4-or-cYA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="cZc-Uf-0BW"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="YH0-69-zSV" secondAttribute="trailing" id="fPU-YC-MeN"/>
