--- a/CodeStockApp/View/SeasonView/OwnFallView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnFallView.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BHk-mQ-683">
-                                <rect key="frame" x="290" y="609" width="60" height="60"/>
+                                <rect key="frame" x="290" y="579" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Cxh-32-69t"/>
@@ -41,8 +41,8 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBrownColor"/>
                         <constraints>
+                            <constraint firstItem="BHk-mQ-683" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="SlM-jZ-OVw"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yIS-dj-dkG" secondAttribute="trailing" id="UBH-Jd-q2w"/>
-                            <constraint firstItem="BHk-mQ-683" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="V5M-BA-Cn4"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BHk-mQ-683" secondAttribute="trailing" constant="43" id="Wg9-Pc-De2"/>
                             <constraint firstItem="yIS-dj-dkG" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="lHi-zZ-Up1"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="yIS-dj-dkG" secondAttribute="bottom" id="oMd-XS-9DR"/>
@@ -64,7 +64,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
