--- a/CodeStockApp/View/SeasonView/OwnWinterView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnWinterView.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cCt-bb-iGV">
-                                <rect key="frame" x="290" y="609" width="60" height="60"/>
+                                <rect key="frame" x="290" y="579" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="2Cz-Cp-Zpe"/>
@@ -45,7 +45,7 @@
                             <constraint firstItem="xDP-Ot-hc1" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="JPX-pd-LlM"/>
                             <constraint firstItem="xDP-Ot-hc1" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Z0k-Af-R1Q"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cCt-bb-iGV" secondAttribute="trailing" constant="43" id="g13-FW-ygi"/>
-                            <constraint firstItem="cCt-bb-iGV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="phy-OD-oKg"/>
+                            <constraint firstItem="cCt-bb-iGV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="k6Y-St-TmD"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="xDP-Ot-hc1" secondAttribute="bottom" id="wa2-ua-zsV"/>
                         </constraints>
                     </view>
