--- a/CodeStockApp/View/SeasonView/SummerView.storyboard
+++ b/CodeStockApp/View/SeasonView/SummerView.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9B4-or-cYA">
-                                <rect key="frame" x="290" y="609" width="60" height="60"/>
+                                <rect key="frame" x="290" y="579" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="f2h-0I-6wr"/>
@@ -41,9 +41,9 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
+                            <constraint firstItem="9B4-or-cYA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="Hn7-hH-jqN"/>
                             <constraint firstItem="YH0-69-zSV" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Rh2-nT-b0m"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="YH0-69-zSV" secondAttribute="bottom" id="cRf-DT-vH1"/>
-                            <constraint firstItem="9B4-or-cYA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="cZc-Uf-0BW"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="YH0-69-zSV" secondAttribute="trailing" id="fPU-YC-MeN"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="9B4-or-cYA" secondAttribute="trailing" constant="43" id="skc-FB-awy"/>
                             <constraint firstItem="YH0-69-zSV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="yEY-gE-gej"/>
@@ -64,7 +64,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
