--- a/CodeStockApp/View/SeasonView/WinterView.storyboard
+++ b/CodeStockApp/View/SeasonView/WinterView.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxH-V9-2Bb">
-                                <rect key="frame" x="290" y="609" width="60" height="60"/>
+                                <rect key="frame" x="290" y="579" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="A4H-Zv-iEG"/>
@@ -42,7 +42,7 @@
                         <color key="backgroundColor" red="0.84287217117756108" green="0.95524658233822979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="hxH-V9-2Bb" secondAttribute="trailing" constant="43" id="6Di-cL-hrw"/>
-                            <constraint firstItem="hxH-V9-2Bb" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="550" id="70D-SQ-z10"/>
+                            <constraint firstItem="hxH-V9-2Bb" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="8py-G2-nby"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="djx-vZ-tYv" secondAttribute="trailing" id="Ibc-SD-uEI"/>
                             <constraint firstItem="djx-vZ-tYv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="SiF-ha-jR4"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="djx-vZ-tYv" secondAttribute="bottom" id="hVH-Aw-KIH"/>
