--- a/CodeStockApp/View/SeasonView/OwnSpringView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnSpringView.storyboard
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nxc-Kg-91J">
-                                <rect key="frame" x="290" y="579" width="60" height="60"/>
+                                <rect key="frame" x="290" y="698" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="O69-sZ-ZyZ"/>
@@ -42,9 +42,9 @@
                         <color key="backgroundColor" red="0.96921318769999998" green="0.82810233830000002" blue="0.91456442069999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="MLo-Kg-SOU" secondAttribute="trailing" id="0wR-g1-41T"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="nxc-Kg-91J" secondAttribute="bottom" constant="60" id="HDM-XL-FXp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="nxc-Kg-91J" secondAttribute="trailing" constant="43" id="Hnr-Nk-JUt"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="MLo-Kg-SOU" secondAttribute="bottom" id="KZs-LZ-rAP"/>
-                            <constraint firstItem="nxc-Kg-91J" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="OFU-RL-uQF"/>
                             <constraint firstItem="MLo-Kg-SOU" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Q2B-I5-eeq"/>
                             <constraint firstItem="MLo-Kg-SOU" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="nTA-9P-QJa"/>
                         </constraints>
