--- a/CodeStockApp/View/SeasonView/OwnSummerView.storyboard
+++ b/CodeStockApp/View/SeasonView/OwnSummerView.storyboard
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cEe-v6-N1P">
-                                <rect key="frame" x="290" y="579" width="60" height="60"/>
+                                <rect key="frame" x="290" y="698" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="a47-hY-ytO"/>
@@ -44,8 +44,8 @@
                             <constraint firstItem="bNc-lz-hno" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="1fb-S4-kSn"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cEe-v6-N1P" secondAttribute="trailing" constant="43" id="AL0-n2-2Hg"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bNc-lz-hno" secondAttribute="bottom" id="Cb4-af-HIT"/>
-                            <constraint firstItem="cEe-v6-N1P" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="S6E-Ub-91U"/>
                             <constraint firstItem="bNc-lz-hno" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l53-74-1EH"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="cEe-v6-N1P" secondAttribute="bottom" constant="60" id="n2Z-bW-TZ7"/>
                             <constraint firstItem="bNc-lz-hno" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="ory-5g-HXU"/>
                         </constraints>
                     </view>
