--- a/CodeStockApp/View/SeasonView/WinterView.storyboard
+++ b/CodeStockApp/View/SeasonView/WinterView.storyboard
@@ -26,7 +26,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxH-V9-2Bb">
-                                <rect key="frame" x="290" y="579" width="60" height="60"/>
+                                <rect key="frame" x="290" y="698" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="A4H-Zv-iEG"/>
@@ -42,9 +42,9 @@
                         <color key="backgroundColor" red="0.84287217117756108" green="0.95524658233822979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="hxH-V9-2Bb" secondAttribute="trailing" constant="43" id="6Di-cL-hrw"/>
-                            <constraint firstItem="hxH-V9-2Bb" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="520" id="8py-G2-nby"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="djx-vZ-tYv" secondAttribute="trailing" id="Ibc-SD-uEI"/>
                             <constraint firstItem="djx-vZ-tYv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="SiF-ha-jR4"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="hxH-V9-2Bb" secondAttribute="bottom" constant="60" id="g7N-fP-1Ht"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="djx-vZ-tYv" secondAttribute="bottom" id="hVH-Aw-KIH"/>
                             <constraint firstItem="djx-vZ-tYv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="pS2-4V-hHk"/>
                         </constraints>
